--- a/standard-crud-sample-web/src/main/resources/ValidationMessages.properties
+++ b/standard-crud-sample-web/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,7 @@
 # this file contains the default messages of JSR 303 bean validation for validations provided in the common library
 
 org.terasoluna.gfw.common.codelist.ExistInCodeList.message = Does not exist in {codeListId}
+
+javax.validation.constraints.NotNull.message = 入力してください。
+javax.validation.constraints.Size.message = ${min == max ? min += '文字で入力してください' : min == 0 ? max += '以内で入力してください。' : min += 'から' += max += '文字で入力してください。'}
+com.github.kazuki43zoo.core.validation.Numeric.message = 半角数字で入力してください。
