--- a/standard-crud-sample-web/src/main/webapp/WEB-INF/web.xml
+++ b/standard-crud-sample-web/src/main/webapp/WEB-INF/web.xml
@@ -62,6 +62,15 @@
     </filter-mapping>
 
     <filter>
+        <filter-name>HiddenHttpMethodFilter</filter-name>
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>HiddenHttpMethodFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
