--- a/standard-crud-sample-web/src/main/webapp/WEB-INF/web.xml
+++ b/standard-crud-sample-web/src/main/webapp/WEB-INF/web.xml
@@ -1,25 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-    version="3.0">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="
+          http://java.sun.com/xml/ns/javaee
+          http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd
+         "
+         version="3.0">
+
     <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    <listener>
-        <listener-class>org.terasoluna.gfw.web.logging.HttpSessionEventLoggingListener</listener-class>
+        <listener-class>
+            org.springframework.web.context.ContextLoaderListener
+        </listener-class>
     </listener>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <!-- Root ApplicationContext -->
         <param-value>
             classpath*:META-INF/spring/applicationContext.xml
             classpath*:META-INF/spring/spring-security.xml
         </param-value>
     </context-param>
 
+    <listener>
+        <listener-class>
+            org.terasoluna.gfw.web.logging.HttpSessionEventLoggingListener
+        </listener-class>
+    </listener>
+
     <filter>
         <filter-name>MDCClearFilter</filter-name>
-        <filter-class>org.terasoluna.gfw.web.logging.mdc.MDCClearFilter</filter-class>
+        <filter-class>
+            org.terasoluna.gfw.web.logging.mdc.MDCClearFilter
+        </filter-class>
     </filter>
     <filter-mapping>
         <filter-name>MDCClearFilter</filter-name>
@@ -28,7 +39,9 @@
 
     <filter>
         <filter-name>exceptionLoggingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <filter-class>
+            org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
     </filter>
     <filter-mapping>
         <filter-name>exceptionLoggingFilter</filter-name>
@@ -37,7 +50,9 @@
 
     <filter>
         <filter-name>XTrackMDCPutFilter</filter-name>
-        <filter-class>org.terasoluna.gfw.web.logging.mdc.XTrackMDCPutFilter</filter-class>
+        <filter-class>
+            org.terasoluna.gfw.web.logging.mdc.XTrackMDCPutFilter
+        </filter-class>
     </filter>
     <filter-mapping>
         <filter-name>XTrackMDCPutFilter</filter-name>
@@ -46,7 +61,9 @@
 
     <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <filter-class>
+            org.springframework.web.filter.CharacterEncodingFilter
+        </filter-class>
         <init-param>
             <param-name>encoding</param-name>
             <param-value>UTF-8</param-value>
@@ -62,19 +79,16 @@
     </filter-mapping>
 
     <filter>
-        <filter-name>HiddenHttpMethodFilter</filter-name>
-        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>
+            org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>HiddenHttpMethodFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-
+        <url-pattern>/authenticate</url-pattern>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
@@ -82,15 +96,15 @@
 
     <servlet>
         <servlet-name>appServlet</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <servlet-class>
+            org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <!-- ApplicationContext for Spring MVC -->
             <param-value>classpath*:META-INF/spring/spring-mvc.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>appServlet</servlet-name>
         <url-pattern>/</url-pattern>
@@ -112,16 +126,20 @@
     </error-page>
     <error-page>
         <error-code>404</error-code>
-        <location>/WEB-INF/views/common/error/resourceNotFoundError.jsp</location>
+        <location>
+            /WEB-INF/views/common/error/resourceNotFoundError.jsp
+        </location>
     </error-page>
     <error-page>
         <exception-type>java.lang.Exception</exception-type>
-        <location>/WEB-INF/views/common/error/unhandledSystemError.html</location>
+        <location>
+            /WEB-INF/views/common/error/unhandledSystemError.html
+        </location>
     </error-page>
-    
+
     <session-config>
-        <!-- 30min -->
         <session-timeout>30</session-timeout>
+        <tracking-mode>COOKIE</tracking-mode>
     </session-config>
 
 </web-app>
