Modify path configuration of tomcat7-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <configuration>
+                        <path>/</path>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
