Fixes bug & support EL 2.2 format in ValidatorMessages.properties

--- a/standard-crud-sample-web/src/main/resources/ValidationMessages.properties
+++ b/standard-crud-sample-web/src/main/resources/ValidationMessages.properties
@@ -3,5 +3,17 @@
 org.terasoluna.gfw.common.codelist.ExistInCodeList.message = Does not exist in {codeListId}
 
 javax.validation.constraints.NotNull.message = 入力してください。
-javax.validation.constraints.Size.message = ${min == max ? min += '文字で入力してください' : min == 0 ? max += '以内で入力してください。' : min += 'から' += max += '文字で入力してください。'}
-com.github.kazuki43zoo.core.validation.Numeric.message = 半角数字で入力してください。
+
+# for EL 3.0 format
+# javax.validation.constraints.Size.message =\
+#  ${min == max ? min += '文字で入力してください。' :\
+#    min == 0   ? max += '文字以内で入力してください。' :\
+#                 min += '文字以上' += max += '文字以内で入力してください。'}
+
+# for EL 2.2 format
+javax.validation.constraints.Size.message =\
+  ${min == max ? ''.concat(min).concat('文字で入力してください。') :\
+    min == 0   ? ''.concat(max).concat('文字以内で入力してください。') :\
+                 ''.concat(min).concat('文字以上').concat(max).concat('文字以内で入力してください。')}
+
+com.github.kazuki43zoo.core.validation.Numeric.message = 半角数字を入力してください。
