--- a/standard-crud-sample-web/src/main/resources/ValidationMessages.properties
+++ b/standard-crud-sample-web/src/main/resources/ValidationMessages.properties
@@ -16,4 +16,6 @@ javax.validation.constraints.Size.message =\
     min == 0   ? ''.concat(max).concat('文字以内で入力してください。') :\
                  ''.concat(min).concat('文字以上').concat(max).concat('文字以内で入力してください。')}
 
+org.hibernate.validator.constraints.Email.message = 正しいメールアドレスを入力してください。
+
 com.github.kazuki43zoo.core.validation.Numeric.message = 半角数字を入力してください。
