--- a/standard-crud-sample-web/src/main/resources/ValidationMessages.properties
+++ b/standard-crud-sample-web/src/main/resources/ValidationMessages.properties
@@ -19,3 +19,4 @@ javax.validation.constraints.Size.message =\
 org.hibernate.validator.constraints.Email.message = 正しいメールアドレスを入力してください。
 
 com.github.kazuki43zoo.core.validation.Numeric.message = 半角数字を入力してください。
+com.github.kazuki43zoo.core.validation.Select.message = 選択してください。
