Improve message resolving

--- a/standard-crud-sample-web/src/main/resources/ValidationMessages.properties
+++ b/standard-crud-sample-web/src/main/resources/ValidationMessages.properties
@@ -3,6 +3,8 @@
 org.terasoluna.gfw.common.codelist.ExistInCodeList.message = Does not exist in {codeListId}
 
 javax.validation.constraints.NotNull.message = 入力してください。
+javax.validation.constraints.Min.message = {value} 以上の値を入力してください。
+javax.validation.constraints.Max.message = {value} 以内の値を入力してください。
 
 # for EL 3.0 format
 # javax.validation.constraints.Size.message =\
